# ai-task-agent

./: .env.example  .gitignore  .vercelignore  README.md  index.html  package-lock.json  package.json  server.js  vite.config.js
api/: [...path].js
api/agent/: run.js  stream.js
api/demo/: report.js
api/integrations/: verify.js
api/llm/: free-models.js
api/runs/: select.js
api/setup/: verify.js
api/tasks/: [id].js  batch.js
api/team/: session.js  workspaces.js
backend/: pyproject.toml
backend/app/: __init__.py  main.py  planner.py  schemas.py  storage.py
backend/app/agents/: graph.py
backend/app/tools/: __init__.py  task_tools.py
backend/tests/: test_agent_contract.py
cloudflare/d1/: schema.sql
docs/: agent-walkthrough.md
evals/: cases.json
lib/: access-control.js  agent-runtime.js  agent-stream.js  api-core.js  demo-report.js  domain.js  env.js  export-package.js  integration-verify.js  integrations.js  llm.js  memory.js  setup-verify.js  storage.js  team-workspaces.js  tracing.js  workspace-context.js
scripts/: d1-migrate.mjs  d1-setup.mjs  d1-smoke.mjs  deploy-check.mjs  eval-agent.mjs  hosted-smoke.mjs  production-env-init.mjs  production-launch.mjs  production-smoke.mjs  smoke.mjs  stress-smoke.mjs  supabase-smoke.mjs  vercel-env-sync.mjs  visual-smoke.mjs
src/: main.jsx  styles.css
src/components/ui/: card.jsx
supabase/migrations/: 0001_ai_task_agent.sql
tests/: api-workflow.test.js  hosted-smoke.test.js  integrations.test.js  production-launch.test.js  storage-d1.test.js  storage-supabase.test.js  vercel-env-sync.test.js
