[project]
name = "ai-task-agent-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend for the AI Task Agent prototype"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
